# currency_converter

./: LICENSE  README.md  pyproject.toml  pytest.ini
api/: exceptions.py  serializers.py  services.py  urls.py  views.py
config/: settings.py  urls.py
data/: tikers.json
exchange_rate/: models.py
exchange_rate/migrations/: 0001_initial.py
tests/: test_services.py  test_urls.py
